# gcoder

./: .gitignore  example_nc.nc  generate_helic_holes.py  helical_grid.nc  pyproject.toml
src/gcoder/: __main__.py  core.py  operations.py  patterns.py  tools.py
