[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gcoder"
version = "0.2.0"
description = "A Python tool for generating CNC G-code outlines from DXF files using a pen/drag tool."
readme = "README.md"
requires-python = ">=3.7"
dependencies = ["ezdxf", "gscrib"]

[project.scripts]
gcoder = "gcoder.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]
